# sb-cli

./: .gitignore  404.html  LICENSE  README.md  get_auth_token.py  index.html  mkdocs.yaml  pyproject.toml  remove_auth_token.py  verify_auth_token.py
authentication/: index.html
css/: custom.css
docs/: authentication.md  index.md  installation.md  quick-start.md
docs/css/: custom.css
docs/getting-started/: authentication.md  index.md  installation.md  quick-start.md
docs/user-guide/: delete-run.md  get-quotas.md  get-report.md  index.md  list-runs.md  submit.md
installation/: index.html
quick-start/: index.html
sb_cli/: __init__.py  config.py  constants.py  delete_run.py  gen_api_key.py  gen_auth_token.py  get_quotas.py  get_report.py  list_runs.py  submit.py  verify_api_key.py  verify_token.py
sbm/: __init__.py  constants.py  gen_auth_token.py  get_auth_token.py  get_report.py  list_runs.py  submit.py  submit_predictions.py  verify_auth_token.py  verify_token.py
sbmapi/: get_auth_token.py  get_report.py  list_runs.py  submit_predictions.py  verify_auth_token.py
search/: search_index.json
user-guide/: index.html
user-guide/delete-run/: index.html
user-guide/get-quotas/: index.html
user-guide/get-report/: index.html
user-guide/list-runs/: index.html
user-guide/submit/: index.html
