[project]
name = "sbm"
version = "0.1.0"
description = "Submit predictions to the SBM API"
authors = [
    { name = "SWE-bench team", email = "support@swebench.com" }
]
dependencies = [
    "typer>=0.9.0",
    "requests",
    "rich",
]
requires-python = ">=3.10"

[project.scripts]
sbm = "sbm:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sbm"]

[tool.ruff]
line-length = 88
src = ["sbm"]
