[project]
name = "sb-cli"
version = "0.1.0"
description = "Submit predictions to the SWE-bench API and manage your runs"
authors = [
    { name = "SWE-bench team", email = "support@swebench.com" }
]
dependencies = [
    "typer>=0.9.0",
    "requests",
    "rich",
]
requires-python = ">=3.10"

[project.scripts]
sb-cli = "sb_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sb_cli"]

[tool.ruff]
line-length = 88
src = ["sb_cli"]

[project.optional-dependencies]
dev = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
